Redmine issue 1019: fixing search help --wiki page visibility

--- a/shared/css/bootstrap_override.css
+++ b/shared/css/bootstrap_override.css
@@ -1953,7 +1953,7 @@ The #searchFormDiv is on all search pages to control form fields, labels, select
 	height: 23px !important;
 }
 .jqx-combobox {
-	height: 23px !important;
+	min-height: 21px !important;
 }
 .tab-content button.rules, #searchForm button.rules[type="button"] {
 	border: none;
